# surfpool

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  rust-toolchain
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: native-scenario-support-for-protocol.md
.github/workflows/: benchmark.yml  release_cli.yaml  rust.yml
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: fixtures.rs  transaction_ingestion.rs
crates/cli/: Cargo.toml
crates/cli/src/cli/: mod.rs
crates/cli/src/cli/simnet/: mod.rs
crates/cli/src/cloud/: mod.rs
crates/cli/src/http/: mod.rs
crates/cli/src/runbook/: mod.rs
crates/cli/src/scaffold/: anchor.rs  mod.rs  utils.rs
crates/cli/src/scaffold/templates/: readme.md.mst
crates/cli/src/tui/: simnet.rs
crates/cli/src/types/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/helpers/: time_travel.rs
crates/core/src/rpc/: accounts_data.rs  accounts_scan.rs  admin.rs  bank_data.rs  full.rs  minimal.rs  mod.rs  surfnet_cheatcodes.rs  utils.rs  ws.rs
crates/core/src/runloops/: mod.rs
crates/core/src/scenarios/: README.md  mod.rs  registry.rs
crates/core/src/scenarios/protocols/drift/v2/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/jupiter/v6/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/kamino/v1/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/meteora/dlmm/v1/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/pyth/v2/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/raydium/v3/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/switchboard/on-demand/: idl.json  overrides.yaml
crates/core/src/scenarios/protocols/whirlpool/: idl.json  overrides.yaml
crates/core/src/storage/: fifo_map.rs  hash_map.rs  mod.rs  overlay.rs  postgres.rs  sqlite.rs
crates/core/src/surfnet/: locker.rs  mod.rs  remote.rs  surfnet_lite_svm.rs  svm.rs
crates/core/src/tests/: helpers.rs  integration.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/gql/: Cargo.toml
crates/gql/src/: query.rs
crates/gql/src/types/: collections.rs  mod.rs  sql.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/mcp/src/surfpool/: mod.rs  set_token_account.rs  start_surfnet.rs
crates/subgraph/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  features.rs  lib.rs  rpc_endpoints.json  scenarios.rs  types.rs
examples/hello-geyser/: Cargo.toml
