[package]
name = "surfpool-cli"
description = "Where you train before surfing Solana"
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "surfpool"
path = "src/main.rs"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
ansi_term = { workspace = true }
anyhow = { workspace = true }
atty = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
convert_case = { workspace = true }
crossbeam = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true, optional = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
fern = { workspace = true, features = ["colored"] }
hiro-system-kit = { workspace = true }
indicatif = { workspace = true }
juniper_actix = { workspace = true, features = ["subscriptions"] }
juniper_graphql_ws = { workspace = true, features = ["graphql-transport-ws"] }
lazy_static = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
mustache = { workspace = true }
notify = { workspace = true, features = ["fsevent-sys"]}
ratatui = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-epoch-info = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, optional = true }
url = { workspace = true }

surfpool-core = { workspace = true }
surfpool-gql = { workspace = true }
surfpool-mcp = { workspace = true }
surfpool-studio-ui = { workspace = true }
surfpool-types = { workspace = true }

txtx-addon-network-svm = { workspace = true }
txtx-cloud = { workspace = true }
txtx-core = { workspace = true }
txtx-gql = { workspace = true }
txtx-supervisor-ui = { workspace = true, optional = true }

[features]
default = ["cli", "sqlite", "subgraph"]
cli = ["clap/derive", "clap/env", "clap_complete", "toml", "ctrlc", "hiro-system-kit/log"]
supervisor_ui = ["txtx-supervisor-ui/crates_build"]
explorer = []
geyser_plugin = ["surfpool-core/geyser_plugin"]
sqlite = ["surfpool-gql/sqlite", "surfpool-core/sqlite"]
postgres = ["surfpool-gql/postgres", "surfpool-core/postgres"]
version_check = []
subgraph = ["surfpool-core/subgraph"]
register-tracing = ["surfpool-core/register-tracing"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
fork = "0.2.0"
