[package]
name = "surfpool-db"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diesel = { workspace = true, default-features = false, features = [
    "chrono",
    "time",
    "serde_json",
    "uuid",
    "r2d2",
] }
diesel-dynamic-schema = { workspace = true }
diesel_derives = { workspace = true }
txtx-addon-kit = { workspace = true }
# Optional dependencies should not be included in the default feature set.
libsqlite3-sys = { version = "0.30.1", optional = true, default-features = false, features = [
    "bundled",
] }
pq-sys = { version = "0.7", optional = true, features = ["bundled"] }
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }

[features]
default = []
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel_derives/sqlite",
    "diesel-dynamic-schema/sqlite",
    "libsqlite3-sys",
]
postgres = [
    "diesel/postgres",
    "diesel_derives/postgres",
    "diesel-dynamic-schema/postgres",
    "pq-sys",
    "openssl-sys",
]
