[package]
name = "surfpool-gql"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
futures = { workspace = true }
juniper = { workspace = true, features = ["uuid"] }
juniper_codegen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
surfpool-db = { workspace = true }
txtx-addon-kit = { workspace = true }
txtx-addon-network-svm-types = { workspace = true }
uuid = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["surfpool-db/sqlite"]
postgres = ["surfpool-db/postgres"]
