[package]
name = "surfpool-mcp"
description = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
hiro-system-kit = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["transport-io", "transport-sse-server", "server", "schemars"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
tracing = { workspace = true }

surfpool-core = { workspace = true }
surfpool-types = { workspace = true }
