[package]
name = "surfpool-types"
description = "Where you train before surfing Solana"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anchor-lang-idl = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
schemars = { workspace = true }
schemars_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc", "macros"] }
strum = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-info = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
uuid = { workspace = true }

txtx-addon-kit = { workspace = true }
txtx-addon-network-svm-types = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
